# QuickDict

./: .clang-format  .gitmodules  CMakeLists.txt  README  README.md
QuickDict/: CMakeLists.txt  clipboardmonitor.cpp  clipboardmonitor.h  configcenter.cpp  configcenter.h  dictindex.h  dictinterface.cpp  dictinterface.h  dictservice.cpp  dictservice.h  hotkey.cpp  hotkey.h  localdict.cpp  localdict.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mdxdict.cpp  mdxdict.h  mobidict.cpp  mobidict.h  monitorinterface.cpp  monitorinterface.h  monitorservice.cpp  monitorservice.h  mouseovermonitor.cpp  mouseovermonitor.h  ocrengine.cpp  ocrengine.h  ocrworker.cpp  qimagecvmat.cpp  qml.qrc  quickdict.cpp  quickdict.h  res.qrc  service.cpp  service.h  shortcutmanager.h  utils.cpp  (+1 more)
QuickDict/qml/: About.ui.qml  Lookup.ui.qml  Main.ui.qml  Settings.ui.qml  Translation.ui.qml  WebView.ui.qml  data.js  home.qml
QuickDict/qml/components/: Phonetic.ui.qml
config/: init.qml
config/DictdDict/: DictdDict.qml  qmldir
config/GoogleTranslate/: GoogleTranslate.qml  qmldir
config/MockDict/: MockDict.qml  data.js
config/MoeDict/: MoeDict.qml  qmldir
config/UrbanDict/: UrbanDict.qml
contrib/: init.qml
contrib/DeepLTranslate/: DeepLTranslate.qml  qmldir
contrib/DictdDict/: DictdDict.qml
contrib/ExampleDict/: ExampleDict.qml  qmldir
contrib/GoogleTranslate/: GoogleTranslate.qml
contrib/MockDict/: MockDict.qml  qmldir
contrib/MoeDict/: MoeDict.qml
contrib/OxfordDictionaries/: OxfordDictionaries.qml  qmldir
contrib/UrbanDict/: UrbanDict.qml  qmldir
src/: CMakeLists.txt  QuickDict_zh_CN.ts  axios.min.js  clipboardmonitor.cpp  configcenter.cpp  configcenter.h  dictinterface.h  dictservice.cpp  dictservice.h  main.cpp  monitorinterface.cpp  monitorinterface.h  monitormanager.cpp  monitormanager.h  monitorservice.cpp  monitorservice.h  mouseovermonitor.cpp  mouseovermonitor.h  ocrengine.cpp  ocrengine.h  ocrworker.cpp  ocrworker.h  qimagecvmat.cpp  qimagecvmat.h  qml.qrc  quickdict.cpp  quickdict.h  res.qrc  shortcutmanager.cpp
src/qml/: Main.ui.qml  Settings.ui.qml  WebView.ui.qml  home.qml
